# fuelburn

./: .gitignore  README.md  cost_tool.py  designAnalysis.py  designTool_merged.py  pyproject.toml  test_145xr.py  test_773er.py
.github/prompts/: plan-requiredFuelSolver.prompt.md
src/fuelburn/: __init__.py  aircraft.py  mission.py  mission_profile.py  presets.py  results.py  simulation.py
tests/: test.py  test_required_fuel.py  test_simple.py  test_taxi.py
